# ssh-chat

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  PROGRESS.md  QUICKSTART.md  README.md  REVIEW.md  config.toml  go.mod  host.key  main.go
src/: config.rs  lib.rs  main.rs
src/abuse/: autobahn.rs  ban.rs  geoip.rs  mod.rs  rate_limit.rs  threats.rs
src/chat/: message.rs  mod.rs  server.rs
src/ssh/: mod.rs  server.rs
src/tui/: console.rs  mod.rs
