[package]
name = "ssh-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for threat list downloads
reqwest = { version = "0.12", features = ["json"] }

# SSH server
russh = "0.54"
async-trait = "0.1"

# Rate limiting
governor = "0.10"
nonzero_ext = "0.3"

# TUI
ratatui = "0.29"
crossterm = "0.29"

# Concurrent collections
dashmap = "6"
parking_lot = "0.12"

# Text processing
unicode-segmentation = "1.11"

# GeoIP
maxminddb = "0.26"

# IP network parsing (CIDR)
ipnetwork = "0.21"

# Utilities
uuid = { version = "1", features = ["v4"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Random
rand = "0.9"
rand_core = "0.6"

[profile.release]
lto = true
opt-level = 3
strip = true
